--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,29 +1,30 @@
 packages:
   - packages/*
   - playground
+
 catalog:
-  "@ant-design/colors": 7.2.1
-  "@ant-design/fast-color": ^3.0.0
-  "@ant-design/icons-svg": ^4.4.2
-  "@antfu/eslint-config": ^5.4.1
-  "@emotion/hash": ^0.8.0
-  "@emotion/unitless": ^0.7.5
-  "@testing-library/jest-dom": ^5.17.0
-  "@types/jsdom": ^27.0.0
-  "@types/node": ^24.10.0
-  "@types/stylis": ^4.2.7
-  "@types/testing-library__jest-dom": ^5.14.9
-  "@v-c/collapse": ^0.0.5
-  "@v-c/color-picker": ^1.0.3
-  "@v-c/mutate-observer": ^0.0.2
-  "@v-c/qrcode": ^0.0.5
-  "@v-c/resize-observer": ^0.0.4
-  "@v-c/util": 0.0.18
-  "@vitejs/plugin-vue": ^6.0.1
-  "@vitejs/plugin-vue-jsx": ^5.1.1
-  "@vue/test-utils": ^2.4.6
-  "@vue/tsconfig": ^0.8.1
-  "@vueuse/core": ^13.9.0
+  '@ant-design/colors': 7.2.1
+  '@ant-design/fast-color': ^3.0.0
+  '@ant-design/icons-svg': ^4.4.2
+  '@antfu/eslint-config': ^5.4.1
+  '@emotion/hash': ^0.8.0
+  '@emotion/unitless': ^0.7.5
+  '@testing-library/jest-dom': ^5.17.0
+  '@types/jsdom': ^27.0.0
+  '@types/node': ^24.10.0
+  '@types/stylis': ^4.2.7
+  '@types/testing-library__jest-dom': ^5.14.9
+  '@v-c/collapse': ^0.0.5
+  '@v-c/color-picker': ^1.0.3
+  '@v-c/mutate-observer': ^0.0.2
+  '@v-c/qrcode': ^0.0.5
+  '@v-c/resize-observer': ^0.0.4
+  '@v-c/util': 0.0.19
+  '@vitejs/plugin-vue': ^6.0.1
+  '@vitejs/plugin-vue-jsx': ^5.1.1
+  '@vue/test-utils': ^2.4.6
+  '@vue/tsconfig': ^0.8.1
+  '@vueuse/core': ^13.9.0
   csstype: ^3.1.3
   defu: ^6.1.4
   es-toolkit: 1.41.0
@@ -39,7 +40,7 @@ catalog:
   tsdown: ^0.15.12
   typescript: ~5.9.3
   unocss: ^66.5.5
-  vite: npm:rolldown-vite@7.2.2
+  vite: npm:rolldown-vite@7.2.7
   vite-plugin-inspect: ^11.3.3
   vite-plugin-tsx-resolve-types: ^0.0.6
   vitest: ^3.2.4
