--- a/packages/antdv-next/package.json
+++ b/packages/antdv-next/package.json
@@ -24,7 +24,7 @@
     "@v-c/qrcode": "catalog:",
     "@v-c/resize-observer": "catalog:",
     "@v-c/segmented": "^0.0.8",
-    "@v-c/select": "^0.0.2",
+    "@v-c/select": "link:/Users/zhuzhengjian/workspace/gitea/antdv-next/vue-components/packages/select",
     "@v-c/slider": "^1.0.7",
     "@v-c/switch": "^0.0.1",
     "@v-c/tabs": "^0.0.3",
@@ -33,7 +33,7 @@
     "@v-c/tour": "^1.0.0",
     "@v-c/trigger": "^1.0.1",
     "@v-c/util": "catalog:",
-    "@v-c/virtual-list": "^1.0.1",
+    "@v-c/virtual-list": "^1.0.2",
     "@vueuse/core": "catalog:",
     "defu": "catalog:",
     "es-toolkit": "catalog:",
