--- a/packages/antdv-next/package.json
+++ b/packages/antdv-next/package.json
@@ -24,7 +24,7 @@
     "@v-c/menu": "^1.0.1",
     "@v-c/mutate-observer": "catalog:",
     "@v-c/notification": "^0.0.2",
-    "@v-c/pagination": "link:/Users/yanyu/workspace/github/antdv-next/vue-components/packages/pagination",
+    "@v-c/pagination": "^0.0.1",
     "@v-c/progress": "^0.0.2",
     "@v-c/qrcode": "catalog:",
     "@v-c/rate": "^0.0.2",
@@ -41,7 +41,7 @@
     "@v-c/tree": "^0.0.1",
     "@v-c/tree-select": "^0.0.1",
     "@v-c/trigger": "^1.0.2",
-    "@v-c/upload": "link:/Users/yanyu/workspace/github/antdv-next/vue-components/packages/upload",
+    "@v-c/upload": "^0.0.1",
     "@v-c/util": "catalog:",
     "@v-c/virtual-list": "^1.0.4",
     "@vueuse/core": "catalog:",
