--- a/playground/package.json
+++ b/playground/package.json
@@ -31,6 +31,7 @@
     "@shikijs/transformers": "^3.20.0",
     "@shikijs/twoslash": "^3.20.0",
     "@types/markdown-it": "^14.1.2",
+    "@types/markdown-it-attrs": "^4.1.3",
     "@types/markdown-it-container": "^2.0.11",
     "dom-serializer": "^2.0.0",
     "domhandler": "^5.0.3",
@@ -40,6 +41,7 @@
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
     "markdown-it-async": "^2.2.0",
+    "markdown-it-attrs": "^4.3.1",
     "markdown-it-container": "^4.0.0",
     "markdown-it-emoji": "^3.0.0",
     "markdown-it-ts": "0.0.2",
