chore: update deps

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
-    "@changesets/cli": "^2.29.8",
+    "@changesets/cli": "catalog:",
     "@types/jsdom": "catalog:",
     "@types/node": "catalog:",
-    "@v-c/trigger": "^1.0.1",
+    "@v-c/trigger": "catalog:",
     "@v-c/util": "catalog:",
     "@vitejs/plugin-vue": "catalog:",
     "@vitejs/plugin-vue-jsx": "catalog:",
@@ -33,7 +33,7 @@
     "turbo": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
-    "vite-plugin-dayjs": "^1.0.1",
+    "vite-plugin-dayjs": "catalog:",
     "vite-plugin-inspect": "catalog:",
     "vite-plugin-tsx-resolve-types": "catalog:",
     "vitest": "catalog:",
