--- a/playground/package.json
+++ b/playground/package.json
@@ -33,7 +33,7 @@
     "@types/markdown-it": "catalog:",
     "@types/markdown-it-attrs": "catalog:",
     "@types/markdown-it-container": "catalog:",
-    "@types/picomatch": "^4.0.2",
+    "@types/picomatch": "catalog:",
     "dom-serializer": "catalog:",
     "domhandler": "catalog:",
     "htmlparser2": "catalog:",
@@ -49,7 +49,7 @@
     "mlly": "catalog:",
     "nanoid": "catalog:",
     "pathe": "catalog:",
-    "picomatch": "^4.0.3",
+    "picomatch": "catalog:",
     "postcss": "catalog:",
     "postcss-selector-parser": "catalog:",
     "shiki": "catalog:",
