docs: fix stackblitz change

--- a/turbo.json
+++ b/turbo.json
@@ -8,12 +8,7 @@
       "outputs": ["../../playground/src/assets/token.json", "../../playground/src/assets/token-meta.json"]
     },
     "build:esm": {
-      "dependsOn": ["^build:esm", "@antdv-next/icons#build"],
-      "inputs": ["src/**", "package.json", "tsconfig.json", "tsdown.config.ts"],
-      "outputs": ["dist/**"]
-    },
-    "@antdv-next/icons#build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build:esm"],
       "inputs": ["src/**", "package.json", "tsconfig.json", "tsdown.config.ts"],
       "outputs": ["dist/**"]
     },
