fix: fix vue language tools not effect

--- a/packages/antdv-next/tsconfig.json
+++ b/packages/antdv-next/tsconfig.json
@@ -16,6 +16,9 @@
     "erasableSyntaxOnly": true,
     "noUncheckedSideEffectImports": true
   },
+  "files": [
+    "./vue.d.ts"
+  ],
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
